- add Denavit-Hartenburg parameter types - add transformation matrix calculation function - add a function to obtain joint and link information from DM parameters

--- a/WMBot/WMBot/WMBot.vcxproj
+++ b/WMBot/WMBot/WMBot.vcxproj
@@ -75,6 +75,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <LibraryPath>C:\dev\ode-0.13\lib\DebugDoubleLib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
