- add debug lib directory and lib files in project

--- a/WMBot/WMBot/WMBot.vcxproj
+++ b/WMBot/WMBot/WMBot.vcxproj
@@ -99,6 +99,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ode_doubled.lib;drawstuffd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
