--- a/robotcodes/RobotPropertySheet.props
+++ b/robotcodes/RobotPropertySheet.props
@@ -4,12 +4,12 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>C:\dev\eigen_3_2_10\eigen_3_2_10;..\..\robotcodes;C:\dev\ode-0.13\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\dev\ode-0.13\lib\ReleaseDoubleLib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\dev\ode-0.13\lib\ReleaseDoubleLib;C:\dev\ode-0.13\lib\DebugDoubleLib;$(LibraryPath)</LibraryPath>
     <_PropertySheetDisplayName>RobotPropertySheet</_PropertySheetDisplayName>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <Link>
-      <AdditionalDependencies>ode_double.lib;drawstuff.lib;opengl32.lib;glu32.lib;winmm.lib;user32.lib;gdi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ode_double.lib;drawstuff.lib;opengl32.lib;glu32.lib;winmm.lib;user32.lib;gdi32.lib;ode_doubled.lib;drawstuffd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ClCompile>
       <PreprocessorDefinitions>dDOUBLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
